# qilbee-os

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default.yaml
deployment/docker/: entrypoint.sh  healthcheck.sh
docs/: section-1-architecture.md  section-2-task-queuing.md  section-3-iac-protocol.md  section-4-conversational.md  section-5-security.md  section-6-security-model.md  section-7-ui.md  section-8-deployment.md
